// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Acta subscribeState.test method When a state change, the callback is triggered in the component. 1`] = `
<div>
  <h1>
    Elements
  </h1>
  <ul
    id="listContainer"
  />
</div>
`;

exports[`Acta subscribeState.test method When a state change, the callback is triggered in the component. 2`] = `
<div>
  <h1>
    Elements
  </h1>
  <ul
    id="listContainer"
  >
    <li>
      a
    </li>
    <li>
      b
    </li>
  </ul>
</div>
`;
